--- a/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
@@ -161,14 +161,18 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="restore_cloud_backup_to_phone">Palauta kohteita Mi Pilvestä</string>
   <string name="restore_data_summary">Tämä toiminto vaatii internet-yhteyden.</string>
   <string name="restore_data_title">Palauta tiedot</string>
+  <string name="restore_finish_description">Palautus valmis</string>
   <string name="restore_finished_notification_content">Palautettiin Aloitusnäytön sovellukset, järjestelmäasetukset jne.</string>
   <string name="restore_from_cloud">Palauta Mi Pilven varmuuskopio</string>
   <string name="restore_from_this_device">Palauta käyttäen tätä varmuuskopiota</string>
   <string name="restore_home_failed">Aloitusnäyttöä ei voitu palauttaa.</string>
   <string name="restore_home_screen_apps">Palauta Mi Pilven varmuuskopiosta</string>
+  <string name="restore_init_description">Aloita palauttaminen</string>
   <string name="restore_task_cancelling">Peruutetaan…</string>
   <string name="restore_task_in_process">Palautetaan…</string>
   <string name="restore_unfinished">Palautetaan, yritä myöhemmin uudelleen</string>
+  <string name="restoring_file_title_no_progress">Palautetaan tiedostoja…</string>
+  <string name="restoring_settings">Palautetaan asetuksia…</string>
   <string name="retry">Yritä uudelleen</string>
   <string name="self_device_main_space">Tämän puhelimen Ensimmäinen tila</string>
   <string name="self_device_second_space">Tämän puhelimen Toinen tila</string>
