--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -2928,7 +2928,6 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="miui_sos_contacts_add">Hätäyhteystiedot</string>
   <string name="miui_sos_contacts_category">Hätäyhteystiedot</string>
   <string name="miui_sos_emergency_contacts">Hätäyhteystiedot</string>
-  <string name="miui_sos_emergency_contacts_quantity">%d lisätty</string>
   <string name="miui_sos_emergency_delivered_sms" formatted="false">%1s (%2s) on jo hyväksynyt.</string>
   <string name="miui_sos_emergency_delivered_sms_noname">%1s on jo hyväksynyt</string>
   <string name="miui_sos_emergency_failed_sms" formatted="false">Viestiä ei voitu lähettää henkilölle %1s (%2s).</string>
@@ -4969,6 +4968,7 @@ Nopeampi ^1 voi toimia tehokkaammin."</string>
   <string name="switch_on_text">Käytössä</string>
   <string name="switch_screen_button_order">Peilaa painikkeet</string>
   <string name="switch_screen_button_order_desc">Peilaa Takaisin- ja Valikko-painikkeet</string>
+  <string name="switch_select_to_speak_on">Valitse puhuaksesi</string>
   <string name="symbols_not_allowed_for_password">Salasana ei voi sisältää symboleja</string>
   <string name="sync_active">Synkronointi käytössä</string>
   <string name="sync_automatically">Sov.tietojen autom. synkronointi</string>
