--- a/Finnish/main/Updater.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Updater.apk/res/values-fi-rFI/strings.xml
@@ -55,6 +55,7 @@ Päivitykset eivät ole käytettävissä sinulle!"</string>
   <string name="pick_title">Valitse käyttäen:</string>
   <string name="recovery_desc">Laite käynnistyy nyt uudelleen Recoverytilaan, jos Recoverytila ei ole sinulle tuttu, älä jatka tämän pidemmälle. Jatketaanko?</string>
   <string name="server_error">Palvelin ei vastaa, sovellus ei välttämättä toimi kunnolla!</string>
+  <string name="share_desc">MIUI-versiosi päivitettiin versioon %1$s, tarkista viimeisin muutosloki osoitteesta: %2$s</string>
   <string name="share_title">Jaa käyttäen</string>
   <string name="stable">vakaa</string>
   <string name="version">Nykyinen versio:</string>
