--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -6,6 +6,7 @@
   <string name="portrait_mode_use_hint_for_bokeh">"Kokeile Muotokuva-tilaa.
 Pitää kohteen terävänä ja sumentaa taustan."</string>
   <string name="pref_new_slow_motion_video_quality_240_720only">Voit nauhoittaa vain 720p-videoita 240fps valittuna</string>
+  <string name="pref_new_slow_motion_video_quality_960_720only">Voit nauhoittaa vain 720p-videoita 960fps valittuna</string>
   <string name="pref_new_slow_motion_video_quality_entry_1080p">FHD 1080p</string>
   <string name="pref_new_slow_motion_video_quality_entry_720p">HD 720p</string>
   <!-- // 8.9.17 // -->
@@ -21,8 +22,14 @@ Pitää kohteen terävänä ja sumentaa taustan."</string>
   <string name="accessibility_beauty_panel_open">Kaunista-valikko on avattu</string>
   <string name="accessibility_beauty_switch_closed">Kaunista pois käytöstä</string>
   <string name="accessibility_beauty_switch_open">Kaunista käytössä</string>
+  <string name="accessibility_bokeh_adjust">Säädetään tastasumennusta</string>
+  <string name="accessibility_bokeh_level">F%1$s aukko</string>
   <string name="accessibility_bokeh_normal">Etukameran taustan sumennus pois käytöstä</string>
   <string name="accessibility_bokeh_on">Etukameran taustan sumennus käytössä</string>
+  <string name="accessibility_camera_lighting_close_panel">Suljettiin salamavalikko</string>
+  <string name="accessibility_camera_lighting_open_panel">Avattiin salamavalikko</string>
+  <string name="accessibility_camera_liveshot_off">Poistettiin dynaamiset otot käytöstä</string>
+  <string name="accessibility_camera_liveshot_on">Otettiin dynaamiset otot käyttöön</string>
   <string name="accessibility_camera_module_picker">Kameranmoduulin valitsija</string>
   <string name="accessibility_camera_picker">Etu- ja takakameran vaihtokytkin</string>
   <string name="accessibility_camera_picker_finish">Vaihdettiin kameroita onnistuneesti</string>
@@ -68,13 +75,27 @@ Pitää kohteen terävänä ja sumentaa taustan."</string>
   <string name="accessibility_zoom_button">Zoom-tila</string>
   <string name="ai_scene_mode_use_hint_text">"AI-kamera tunnistaa näkymän automaattisesti
 ja optimoi valokuvasi näiden tietojen perusteella"</string>
+  <string name="ai_scene_top_moon_off">Hämärätila</string>
+  <string name="ai_scene_top_tip">Kuutila</string>
   <string name="audio_focus_exit_button_text">Poista Äänitarkennus käytöstä</string>
   <string name="back_bokeh_use_hint">Pidä kohde 1,5 metrin sisällä parhaan tehosteen saamiseksi</string>
+  <string name="beauty_body">Vartalo</string>
+  <string name="beauty_body_body">Hoikka</string>
+  <string name="beauty_body_head">Pää</string>
+  <string name="beauty_body_legged">Jalat</string>
+  <string name="beauty_body_reset_tip">Vartalon tehosteet poistettiin onnistuneesti</string>
+  <string name="beauty_body_shoulder">Olkapäät</string>
+  <string name="beauty_body_slim_count_tip">Vartalon tehosteet toimivat vain yhden henkilön kuvissa</string>
   <string name="beauty_fragment_tab_name_3d_beauty">Kauneus</string>
   <string name="beauty_fragment_tab_name_3d_makeup">Meikki</string>
   <string name="beauty_fragment_tab_name_3d_remodeling">Muotoillaan uudelleen</string>
   <string name="beauty_fragment_tab_name_beauty">Kauneus</string>
   <string name="beauty_fragment_tab_name_makeup">Edistynyt</string>
+  <string name="beauty_mode_reset_toast">Poistettiin uudelleenmuotoilutehosteet</string>
+  <string name="beauty_reset">Palauta</string>
+  <string name="beauty_reset_toast">Palautettiin vartalon tehosteet onnistuneesti</string>
+  <string name="beauty_tab_name_live_beauty">Kaunista</string>
+  <string name="beauty_tab_name_live_filter">Suodattimet</string>
   <string name="bokeh_use_hint">Syvyystehoste</string>
   <string name="burst_shoot_exit_button_text">Poista Sarjakuvaus käytöstä</string>
   <string name="button_fisheye_camera_title">Kalansilmä</string>
@@ -84,6 +105,8 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="camera_error_title">Kameravirhe</string>
   <string name="camera_facedetection_sub_option_hint">Kokeellinen ominaisuus</string>
   <string name="camera_label">Kamera</string>
+  <string name="camera_liveshot_off_tip">Poistettiin dynaamiset otokset käytöstä</string>
+  <string name="camera_liveshot_on_tip">Dynaamiset otokset</string>
   <string name="camera_mode_options">Tilat</string>
   <string name="camera_setting">Kamera-asetukset</string>
   <string name="camera_settings_label">Kamera</string>
@@ -135,12 +158,12 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="confirm_recording_fail_title">Ei voi nauhoittaa</string>
   <string name="confirm_restore_message">Palautetaanko kameran oletusasetukset?</string>
   <string name="confirm_restore_title">Palauta oletusasetukset</string>
-  <string name="custom_watermark_contains_senstive_words">Muokkaa arkaluonteista tekstiä %1$s</string>
-  <string name="custom_watermark_tips">Yllä oleva teksti tulee olemaan kuvan vesileiman toisella rivillä. Rajoita se 15 merkkiin.</string>
-  <string name="custom_watermark_too_many_words">Menit merkkirajan yli</string>
-  <string name="custom_watermark_words">Käyttäjän määrittämät vesileiman sanat</string>
-  <string name="custom_watermark_words_input_hint">Anna sanat</string>
-  <string name="custom_watermark_words_save_success">Tallennettii onnistuneesti</string>
+  <string name="custom_watermark_contains_senstive_words">Vesileimat eivät voi sisältää rajoitettuja ehtoja (%1$s)</string>
+  <string name="custom_watermark_tips">Tämä teksti näkyy vesileiman toisella rivillä. Se voi sisältää 18 kirjainta tai 14 Kiinalaista merkkiä.</string>
+  <string name="custom_watermark_too_many_words">Antamasi teksti on liian pitkä</string>
+  <string name="custom_watermark_words">Mukautettu vesileima</string>
+  <string name="custom_watermark_words_input_hint">Anna teksti</string>
+  <string name="custom_watermark_words_save_success">Tallennettiin onnistuneesti</string>
   <string name="device_48m_watermark_default_text">48M KAKSOISKAMERA</string>
   <string name="device_watermark_default_text">AI KAKSOISKAMERA</string>
   <string name="dialog_ok">OK</string>
@@ -228,32 +251,38 @@ Muotokuvatilassa"</string>
   <string name="lighting_pattern_rainbow">Sateenkaari</string>
   <string name="lighting_pattern_shutter">Kaihtimet</string>
   <string name="lighting_pattern_stage">Näyttämö</string>
-  <string name="live_edit_exit_confirm">Poistu</string>
-  <string name="live_edit_exit_message">Hylätäänkö kaappaus?</string>
+  <string name="live_edit_exit_confirm">Lopeta</string>
+  <string name="live_edit_exit_message">Lopetetaanko ottaminen nyt?</string>
   <string name="live_edit_share_title">Jaa</string>
-  <string name="live_error_confirm">Säädä</string>
-  <string name="live_error_message">Toimintovirhe</string>
-  <string name="live_error_title">Toimintovirhe</string>
-  <string name="live_music_change_bgm">Korvaa Musiikki</string>
+  <string name="live_error_confirm">Säädä aika</string>
+  <string name="live_error_message">Jotkut toiminnot eivät välttämättä toimi oikein, jos järjestelmän aika on virheellinen.</string>
+  <string name="live_error_title">Järjestelmän aika ei ole oikeassa</string>
+  <string name="live_music_change_bgm">Vaihda taustamusiikki</string>
   <string name="live_music_close_cancel_message">Peruuta</string>
-  <string name="live_music_close_message">Suljetaanko nykyinen musiikki?</string>
+  <string name="live_music_close_message">Suljetaanko musiikki nyt?</string>
   <string name="live_music_close_sure_message">Sulje</string>
-  <string name="live_music_downloading_tips">Ladataan...</string>
-  <string name="live_music_hot_title">Kuumaa Musiikkia</string>
-  <string name="live_music_local_title">Paikallinen Musiikki</string>
-  <string name="live_music_network_exception">Verkon poikkeama</string>
-  <string name="live_music_network_exception_tips">Verkon poikkeamia, yritä uudelleen napauttamalla</string>
+  <string name="live_music_downloading_tips">Ladataan…</string>
+  <string name="live_music_hot_title">Suositut kappaleet</string>
+  <string name="live_music_local_title">Paikallinen</string>
+  <string name="live_music_network_exception">Verkkovirhe</string>
+  <string name="live_music_network_exception_tips">Tapahtui verkkovirhe. Yritä uudelleen napauttamalla.</string>
   <string name="live_reverse_confirm">Poista</string>
-  <string name="live_reverse_message">Poistetaanko viimeinen osa?</string>
-  <string name="live_speed_extreme_fast">Nopein</string>
-  <string name="live_speed_extreme_slow">Hitain</string>
+  <string name="live_reverse_message">Poistetaanko viimeiseksi tallennettu kohde?</string>
+  <string name="live_share_moments">Hetket</string>
+  <string name="live_share_qq">QQ</string>
+  <string name="live_share_qzone">QZone</string>
+  <string name="live_share_tik">TikTok</string>
+  <string name="live_share_wechat">WeChat</string>
+  <string name="live_share_weibo">WeiBo</string>
+  <string name="live_speed_extreme_fast">Todella nopea</string>
+  <string name="live_speed_extreme_slow">Todella hidas</string>
   <string name="live_speed_fast">Nopea</string>
   <string name="live_speed_fragment_tab_name">Nopeus</string>
-  <string name="live_speed_normal">Normaali</string>
+  <string name="live_speed_normal">Tavallinen</string>
   <string name="live_speed_slow">Hidas</string>
-  <string name="live_sticker_fragment_tab_name">Taika</string>
+  <string name="live_sticker_fragment_tab_name">Tarrat</string>
   <string name="live_sticker_network_error_hint">Verkkovirhe</string>
-  <string name="live_sticker_updating">Päivitetään...</string>
+  <string name="live_sticker_updating">Päivitetään…</string>
   <string name="makeup_reset_toast">Poista meikkitehosteet</string>
   <string name="message_snap_double_confirm">Äänenvoimakkuuspainikkeen pitkä painallus käynnistää tällä hetkellä NFC:n. Korvataanko tämä ominaisuus?</string>
   <string name="module_name_beauty">Kauneus</string>
@@ -265,6 +294,7 @@ Muotokuvatilassa"</string>
   <string name="module_name_square">Neliö</string>
   <string name="module_name_video">Video</string>
   <string name="multi_window_mode_not_supported">Kamera ei toimi jaetulla näytöllä</string>
+  <string name="network_access_user_notice_title">Yhdistetään internetiin</string>
   <string name="no_storage">Kameran tallennustila ei ole käytettävissä järjestelmävirheen vuoksi.</string>
   <string name="not_enough_space">Sisäinen tallennustila on täynnä</string>
   <string name="object_track_enable_toast">Valitaksesi objektin, napauta yhtäaikaa kaksi diagonaalista pistettä sen reunoille.</string>
@@ -417,6 +447,8 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_multilevel_entry_lowest">Matalin</string>
   <string name="pref_camera_multilevel_entry_middle">Keskitaso (oletus)</string>
   <string name="pref_camera_multilevel_entry_normal">Normaali</string>
+  <string name="pref_camera_normal_wide_ldc_description">Korjaa ihmisten kasvojen vääristymät, jotka ovat lähellä kehysten reunoja</string>
+  <string name="pref_camera_normal_wide_ldc_title">Korjaa kasvojen vääristymät ryhmäkuvissa</string>
   <string name="pref_camera_optimized_flash_enable_title">Optimoitu salama</string>
   <string name="pref_camera_panoramamode_title">Panoraama</string>
   <string name="pref_camera_parallel_process_enable_title">Ota käyttöön rinnakkainen käsittely</string>
@@ -484,6 +516,11 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_touchafaec_entry_off">Pois päältä</string>
   <string name="pref_camera_touchafaec_entry_on">Päällä</string>
   <string name="pref_camera_ubifocus_title">Uudelleentarkennus</string>
+  <string name="pref_camera_ultra_wide_ldc_description">Korjaa vääristyneet kohteet automaattisesti</string>
+  <string name="pref_camera_ultra_wide_ldc_title">Korjaa vääristymät laajakulmaotoksissa</string>
+  <string name="pref_camera_ultra_wide_mode_title">Laajakulmatila</string>
+  <string name="pref_camera_video_bokeh_off">Videon bokeh pois käytöstä</string>
+  <string name="pref_camera_video_bokeh_on">Videon bokeh käytössä</string>
   <string name="pref_camera_video_duration_entry_10">10 minuuttia</string>
   <string name="pref_camera_video_duration_entry_120">Ei rajaa</string>
   <string name="pref_camera_video_duration_entry_30">30 minuuttia</string>
@@ -505,6 +542,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_zoom_mode_entry_high_pixel">HEIKKO VALAISTUS</string>
   <string name="pref_camera_zoom_mode_entry_standard">TAVALLINEN</string>
   <string name="pref_camera_zoom_mode_entry_tele">TELE</string>
+  <string name="pref_camera_zoom_mode_entry_ultra">Laajakulma</string>
   <string name="pref_camera_zoom_mode_entry_wide">LAAJA</string>
   <string name="pref_camera_zoom_mode_title">LINSSI</string>
   <string name="pref_camera_zsl_entry_off">Pois päältä</string>
@@ -534,6 +572,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_skin_beautify_intelligent_title">Älykäs</string>
   <string name="pref_skin_beautify_slim_title">Hoikka</string>
   <string name="pref_skin_beautify_smooth_title">Sileä</string>
+  <string name="pref_userdefine_watermark_title">Mukautettu vesileima</string>
   <string name="pref_video_captrue_ability_title">Valokuvan ottaminen nauhoituksen aikana</string>
   <string name="pref_video_encoder_default">h264</string>
   <string name="pref_video_encoder_entry_h264">H.264 Korkea yhteensopivuus</string>
@@ -617,6 +656,18 @@ ja tuo henkilöt esiin."</string>
   <string name="toast_start_audio_capture">Ota kuva ääntelemällä</string>
   <string name="ubi_focus_capture_fail">Kuvan ottaminen epäonnistui</string>
   <string name="ubifocus_capture_warning_message">Parhaan tuloksen saavuttamiseksi, kuvassasi täytyy kohteiden olla sekä lähellä (alle 1 metrin päässä linssistä) että kaukana</string>
+  <string name="ultra_pixel_photography_32mp_close_tip">32MP pois käytöstä</string>
+  <string name="ultra_pixel_photography_32mp_open_tip">32MP</string>
+  <string name="ultra_pixel_photography_48mp_close_tip">48MP pois käytöstä</string>
+  <string name="ultra_pixel_photography_48mp_open_tip">48MP</string>
+  <string name="ultra_wide_bokeh_close_tip">Kokovartalontila pois käytöstä</string>
+  <string name="ultra_wide_bokeh_open_tip">Kokovartalontila</string>
+  <string name="ultra_wide_close_tip">Laajakulmatila pois käytöstä</string>
+  <string name="ultra_wide_mode">Laajakulma</string>
+  <string name="ultra_wide_mode_use_hint_text">"Käytä tätä tilaa sisällyttääksesi kuvaasi isomman näkymän.
+Laajakulmatila tulee apuun, kun et voi liikkua kauemmaksi kohteestasi."</string>
+  <string name="ultra_wide_open_tip">Laajakulmatila</string>
+  <string name="ultra_wide_recommend_tip_hint">Kokeile laajakulmatilaa</string>
   <string name="user_agree">Hyväksy</string>
   <string name="user_agreement2">Palveluehdot</string>
   <string name="user_agreement4">Tietosuojakäytäntö</string>
