--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -1125,11 +1125,15 @@ Kaikki käyttäjät voivat päivittää kaikkien käyttäjien sovelluksia."</str
   <string name="block_record_notification_title">Ilmoitukset on piilotettu</string>
   <string name="bluetooth_a2dp_profile_summary_connected">Yhdistetty median ääneen</string>
   <string name="bluetooth_a2dp_profile_summary_use_for">Käytä median äänille</string>
-  <string name="bluetooth_connected">Yhdistetty</string>
-  <string name="bluetooth_connected_no_a2dp">Yhdistetty (ei median ääntä)</string>
-  <string name="bluetooth_connected_no_headset">Yhdistetty (ei puhelimen ääntä)</string>
-  <string name="bluetooth_connected_no_headset_no_a2dp">Yhdistetty (ei puhelimen/median ääntä)</string>
-  <string name="bluetooth_connected_no_map">Yhdistetty (ei MAP)</string>
+  <string name="bluetooth_connected">Yhdistetty %1$s</string>
+  <string name="bluetooth_connected_battery_level">Yhdistetty | Akku %1$s%2$s</string>
+  <string name="bluetooth_connected_no_a2dp">Yhdistetty (ei median ääntä) %1$s</string>
+  <string name="bluetooth_connected_no_a2dp_battery_level">Yhdistetty (ei median ääntä) | Akku %1$s%2$s</string>
+  <string name="bluetooth_connected_no_headset">Yhdistetty (ei puhelimen ääntä) %1$s</string>
+  <string name="bluetooth_connected_no_headset_battery_level">Yhdistetty (ei puhelimen ääntä) | Akku %1$s%2$s</string>
+  <string name="bluetooth_connected_no_headset_no_a2dp">Yhdistetty (ei puhelimen/median ääntä) %1$s</string>
+  <string name="bluetooth_connected_no_headset_no_a2dp_battery_level">Yhdistetty (ei puhelimen/median ääntä) | Akku %1$s%2$s</string>
+  <string name="bluetooth_connected_no_map">Yhdistetty (ei MAP) %1$s</string>
   <string name="bluetooth_connecting">Yhdistetään…</string>
   <string name="bluetooth_disable_absolute_volume">Poista yleinen äänenvoimakkuuden säätö käytöstä</string>
   <string name="bluetooth_disable_absolute_volume_summary">Bluetoothin yleinen äänenvoimakkuuden säätö poistetaan käytöstä ongelmien välttämiseksi esimerkiksi silloin, kun laitteen äänenvoimakkuus on liian kova tai sitä ei voi säätää.</string>
