--- a/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
@@ -843,14 +843,25 @@ testi onnistui, paina Läpäisi-painiketta"</string>
   <string name="other_category">其他</string>
   <string name="over_saturated_pixel_num">上饱和点个数:</string>
   <string name="overlay">跟上一张重复:</string>
+  <string name="pass">Läpäisi</string>
+  <string name="phone_not_been_restarted">Puhelinta ei ole käynnistetty uudelleen</string>
+  <string name="picture">Kuva</string>
+  <string name="placeholder">占位置</string>
+  <string name="plugout_and_reverse_plugin">"
+Poista laturista ja aseta laturi takaisin kiinni kääntäen laturipää."</string>
+  <string name="pop_camera">Näytä kamera</string>
+  <string name="pop_push_camera_test_summary">"Paina Näytä kamera -painiketta nähdäksesi tuleeko kamera esiin
+Paina Piilota kamera -painiketta nähdäksesi meneekö kamera takaisin sisään"</string>
+  <string name="pop_push_camera_test_title">Näytä ja piilota kamera -testi</string>
   <string name="preprocess_time">预处理耗时:</string>
   <string name="preprocess_version">预处理版本:</string>
   <string name="production_date">生产日期:</string>
   <string name="protocol_version">协议版本：</string>
+  <string name="push_camera">Piilota kamera</string>
   <string name="real_finger_touch_sensor">通过手指按压指纹模组</string>
   <string name="reboot_prompt">重启提示</string>
   <string name="reboot_prompt_detail">重启手机之后内存测试正常运行！</string>
-  <string name="remove_headset_and_starttest">Please remove headset and press start to test</string>
+  <string name="remove_headset_and_starttest">Poista kuulokkeet ja paina aloita testaaksesi</string>
   <string name="resetpixel_test">RESET PIXEL TEST</string>
   <string name="run">Run</string>
   <string name="sample_data">sample data</string>
@@ -863,6 +874,9 @@ testi onnistui, paina Läpäisi-painiketta"</string>
   <string name="sar_sensor_collect_data_test_summary">"Rotate the phone to ensure that the real-time angle is between 130 and 140 degrees
 Keep the other hand away from the cell phone. Click on the start data acquisition button
 After calibrate success,Observe that the absolute value of CS0i and CS1 is less than 200 and the value of CS1 is more than 300. After five consecutive times, the other hand is close to the bottom of the cell phone,The value of CS0 is highlighted by the button after 3 consecutive times between 3000 and 30000,the pass button is highlight"</string>
+<string name="sar_sensor_collect_test_summary">"Rotate the phone, put it to the fixture
+Click the Start data acquisition button
+Control the fixture close and away from the phone"</string>
   <string name="sar_sensor_data_check_description">Sar Sensor Data Collect</string>
   <string name="sar_sensor_data_check_summary">"Hold the top of the phone with one hand
 Make sure the real time Angle is about 45 degrees
