--- a/Finnish/main/MiuiScreenRecorder.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiScreenRecorder.apk/res/values-fi-rFI/strings.xml
@@ -84,4 +84,5 @@
   <string name="unchecked">Ei valittu</string>
   <string name="using_record_confirm_cancel">Rajoita</string>
   <string name="using_record_confirm_ok">Salli</string>
+  <string name="warning_recording_when_a2dp_connect">Laitteesi ei tue järjestelmän äänien nauhoittamista Bluetooth-kuulokkeiden ollessa käytössä.</string>
 </resources>
