--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -783,6 +783,8 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="not_installed">Ei asennettu</string>
   <string name="note_name">Luo</string>
   <string name="note_parent">Muistiot</string>
+  <string name="notification_channel_card">Kortit</string>
+  <string name="notification_channel_default">Oletus</string>
   <string name="notification_content_fail_not_support">Maksutietoja ei voitu hakea, lisää tietue manuaalisesti.</string>
   <string name="notification_content_fail_stay_longer">Pysy maksusivulla vähintään yhden sekunnin ajan</string>
   <string name="notification_content_success">%2$s CNY maksu %1$s kuluttua</string>
@@ -981,6 +983,13 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="settings_title">Ilmoita suosikkeihin lisäämisistä</string>
   <string name="share_title">Jaa URL-osoite käyttäen</string>
   <string name="shopping_setting_mishop">Mi Kauppa</string>
+  <string name="shopping_setting_notification">Ilmoita uusista kohteista</string>
+  <string name="shopping_setting_pinduoduo">Pinduoduo</string>
+  <string name="shopping_setting_remove">Peruutettuasi valtuutuksen, Sovellusholvi lopettaa ostoksiesi tietojen keräilyn ja Ostoskortti poistetaan. Peruutetaanko valtuutus silti?</string>
+  <string name="shopping_setting_taobao">Taobao</string>
+  <string name="shopping_setting_tmall">Tmall</string>
+  <string name="shopping_source">Mistä</string>
+  <string name="shopping_support">Tuetut sovellukset</string>
   <string name="shortcut">Pikakuvakkeet</string>
   <string name="show_more">Näytä lisää</string>
   <string name="smart_assistant_enter_tip">Sovellusholvi</string>
